--- a/_config.yml
+++ b/_config.yml
@@ -68,4 +68,6 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repository: https://github.com/wanglong001/wanglong001.github.io.git
+  branch: master
