--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -135,12 +135,18 @@ font:
 #social:
   #LinkLabel: Link
 
+social:
+   GitHub: https://github.com/wanglong001
+
 
 # Social Links Icons
 # Icon Mapping:
 #   Map a menu item to a specific FontAwesome icon name.
 #   Key is the name of the item and value is the name of FontAwesome icon. Key is case-senstive.
 #   When an globe mask icon presenting up means that the item has no mapping icon.
+
+	
+
 social_icons:
   enable: true
   # Icon Mappings.
