Form auto backup script's commit

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -288,7 +288,7 @@ mathjax:
 #baidu_analytics:
 
 # Duoshuo ShortName
-#duoshuo_shortname:
+duoshuo_shortname: wanglong001.github.io
 
 # Disqus
 #disqus_shortname:
@@ -347,7 +347,7 @@ duoshuo_info:
   ua_enable: true
   admin_enable: false
   user_id: 0
-  #admin_nickname: Author
+  admin_nickname: Author
 
 
 # Facebook SDK Support.
