--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -320,7 +320,7 @@ duoshuo_shortname: wanglong001.github.io
 #add_this_id:
 
 # Share
-duoshuo_share: true
+#duoshuo_share: true
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
