Form auto backup script's commit

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -288,10 +288,10 @@ mathjax:
 #baidu_analytics:
 
 # Duoshuo ShortName
-duoshuo_shortname: wanglong001.github.io
+#duoshuo_shortname: wanglong001.github.io
 
 # Disqus
-#disqus_shortname:
+disqus_shortname: wanglong001
 
 # Hypercomments
 #hypercomments_id:
