Form auto backup script's commit

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,9 @@ pagination_dir: page
 #theme: landscape
 theme: next
 
+# Disqus
+disqus_shortname: wanglong001
+
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
