--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -291,6 +291,7 @@ mathjax:
 #duoshuo_shortname: wanglong001.github.io
 
 # Disqus
+disqus: wanglong001
 disqus_shortname: wanglong001
 
 # Hypercomments
