--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -293,7 +293,7 @@ mathjax:
 #duoshuo_shortname: wanglong001.github.io
 
 # Disqus
-#disqus_shortname: wanglong001
+disqus_shortname: wanglong001
 
 # Hypercomments
 #hypercomments_id:
