Form auto backup script's commit

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -293,7 +293,7 @@ mathjax:
 #duoshuo_shortname: wanglong001.github.io
 
 # Disqus
-disqus_shortname: wanglong001.github.io
+#disqus_shortname: wanglong001.github.io
 
 # Hypercomments
 #hypercomments_id:
@@ -383,9 +383,9 @@ vkontakte_api:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  enable: true
+  app_id: iIiYddv6uPsx7pkA9Ffyxnw6-gzGzoHsz
+  app_key: 9BjTylnQxlmoUA8tE8HPGUly
 
 # Show PV/UV of the website/page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
