--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -446,7 +446,7 @@ algolia_search:
 
 # Local search
 local_search:
-  enable: true
+  enable: false
 
 # External URL with BASE64 encrypt & decrypt
 # Usage: {% exturl text url "title" %}
