--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -37,7 +37,7 @@ seo: false
 # When running the site in a subdirectory (e.g. domain.tld/blog), remove the leading slash (/archives -> archives)
 menu:
   home: /
-  #categories: /categories
+  categories: /categories
   #about: /about
   archives: /archives
   tags: /tags
@@ -137,7 +137,7 @@ font:
 
 social:
    GitHub: https://github.com/wanglong001
-   Email: 406134592@qq.com
+   Email: mailto:406134592@qq.com
 
 
 # Social Links Icons
