--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -161,7 +161,7 @@ social_icons:
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.jpg
 # in site  directory(source/uploads): /uploads/avatar.jpg
-#avatar:
+avatar: /images/long.jpg
 
 
 # Table Of Contents in the Sidebar
