--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
+    "leancloud-storage": "^2.1.3",
     "shelljs": "^0.7.6"
   }
 }
