Form auto backup script's commit

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -292,8 +292,8 @@ mathjax:
 # Duoshuo ShortName
 #duoshuo_shortname: wanglong001.github.io
 
-# Disqus
-#disqus_shortname: wanglong001.github.io
+#Disqus
+disqus_shortname: wanglong001
 
 # Hypercomments
 #hypercomments_id:
